--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -1456,6 +1456,8 @@ jobs:
         switch: off
       - IN: prod_release
         switch: off
+      - IN: drydock_release
+        switch: off
       - IN: c7baseami_params
         switch: off
       - IN: ami_bits_access
@@ -1465,7 +1467,7 @@ jobs:
           script:
             - pushd $(shipctl get_resource_state "buildami_repo")
             - cd c7Exec
-            - ./execPack.sh c7finalami_prep prod_release c7baseami_patch ami_bits_access
+            - ./execPack.sh c7finalami_prep prod_release c7baseami_patch ami_bits_access drydock_release
             - popd
     on_failure:
       - script: cat $(shipctl get_resource_state buildami_repo)/c7Exec/output.txt
