creating u14 ami only when new drydock release is created

--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -29,8 +29,8 @@ tag_docker_img_temp: &tag_docker_img
       docker pull "$IMG_NAME:$IMG_TAG"
       docker tag "$IMG_NAME:$IMG_TAG" "$IMG_NAME:$REL_VER"
       docker push "$IMG_NAME:$REL_VER"
-      #docker tag "$IMG_NAME:$IMG_TAG" "$IMG_NAME:latest"
-      #docker push "$IMG_NAME:latest"
+      docker tag "$IMG_NAME:$IMG_TAG" "$IMG_NAME:latest"
+      docker push "$IMG_NAME:latest"
 
 get_git_tags_temp: &get_git_tags
   - |
