--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -2301,6 +2301,8 @@ jobs:
         switch: off
       - IN: prod_release
         switch: off
+      - IN: drydock_release
+        switch: off
       - IN: baseami_params
         switch: off
       - IN: ami_bits_access
@@ -2309,7 +2311,7 @@ jobs:
           script:
             - pushd $(shipctl get_resource_state "buildami_repo")
             - cd exec
-            - ./execPack.sh finalami_prep prod_release baseami_patch ami_bits_access
+            - ./execPack.sh finalami_prep prod_release baseami_patch ami_bits_access drydock_release
             - popd
     on_failure:
       - script: cat /build/IN/buildami_repo/gitRepo/exec/output.txt
